--- a/assets/sass/navigation/_menus.scss
+++ b/assets/sass/navigation/_menus.scss
@@ -98,7 +98,8 @@
 		.current_page_item,
 		.current-menu-item,
 		.current_page_ancestor,
-		.current-menu-ancestor {
+		.current-menu-ancestor,
+		.menu-item-home {
 			border-color: $color__secondary;
 		}
 	}
