--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -14,7 +14,7 @@ article {
 	margin-top: 1rem;
 	padding: 1rem;
 	&:first-child {
-		margin-top: 4rem;
+		margin-top: 0;
 	}
 	&:not(:last-child) {
 		margin-bottom: 6rem;
@@ -61,7 +61,22 @@ header.entry-header {
 	display: inline;
 }
 
+.entry-content {
+	max-width: 100%;
+}
+
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+.no-results {
+	text-align: center;
+	margin: 0 1rem;
+}
+
+@media screen and (min-width: 37.5em) {
+	.hentry:first-child {
+		margin-top: 4rem;
+	}
 }
